Fix Safari transform rotate bug (Add z-index 0 to all elements)

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   margin-block-end: 0;
   position: relative;
   box-sizing: border-box;
+  z-index: 0;
 }
 
 html,
